--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,20 +1,93 @@
 # Reproducible Research: Peer Assessment 1
-
-
+```{r}
+library(lattice)
+```
 ## Loading and preprocessing the data
-
-
+Load csv data **activity.csv** and convert dates to **R Date class**  
+```{r}
+actdata <- read.csv("activity.csv")
+actdata$date <- as.Date(actdata$date,"%Y-%m-%d")
+```
 
 ## What is mean total number of steps taken per day?
+Compute total number of steps per day  
+```{r}
+totsteps <- tapply(actdata$steps, actdata$date,sum)
 
+```
+Plot histogram of **total number of steps per day**
+```{r}
+hist(totsteps,col="blue",xlab="Total Steps per Day", 
+      ylab="Frequency", main="Histogram of Total Steps taken per day")
+```
+Compute Mean total steps taken per day
+```{r}
+mean(totsteps,na.rm=TRUE)
+```
 
+Compute Median total steps taken per day
+```{r}
+median(totsteps,na.rm=TRUE)
+```
 
 ## What is the average daily activity pattern?
-
+Compute mean of steps over all days by time interval
+```{r}
+meansteps <- tapply(actdata$steps,actdata$interval,
+                                 mean,na.rm=TRUE)
+```
+Timeseries plot of of the 5-minute interval and the average number of steps taken, averaged across all days
+```{r}
+plot(row.names(meansteps),meansteps,type="l",
+     xlab="Time Intervals (5-minute)", 
+     ylab="Mean number of steps taken (all Days)", 
+     main="Average Steps Taken at 5 minute Intervals",
+     col="blue")
+```
+Find the time interval that contains maximum average number of steps over all days
+```{r}
+interval_num <- which.max(meansteps)
+interval_max_steps <- names(interval_num)
+interval_max_steps
+```
+The ** `r  interval_max_steps `** minute  or ** `r  interval_num `th ** 5 minute interval contains the maximum number of steps on average across all the days
 
 
 ## Imputing missing values
+Compute the number of NA values in the activity dataset
+```{r}
+num_na_values <- sum(is.na(actdata))
+num_na_values 
+```
 
-
+Fill in missing values using the **average interval value across all days**
+```{r}
+na_indices <-  which(is.na(actdata))
+imputed_values <- meansteps[as.character(actdata[na_indices,3])]
+names(imputed_values) <- na_indices
+for (i in na_indices) {
+    actdata$steps[i] = imputed_values[as.character(i)]
+}
+sum(is.na(actdata)) 
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+```{r}
+days <- weekdays(actdata$date)
+actdata$day_type <- ifelse(days == "Saturday" | days == "Sunday", 
+                                "Weekend", "Weekday")
+meansteps <- aggregate(actdata$steps,
+                                    by=list(actdata$interval,
+                                            actdata$day_type),mean)
+names(meansteps) <- c("interval","day_type","steps")
+xyplot(steps~interval | day_type, meansteps,type="l",
+       layout=c(1,2),xlab="Interval",ylab = "Number of steps")
+
+```
+Let's compute the mean, median, max and min of the steps across all intervals and days by Weekdays/Weekends
+```{r}
+tapply(meansteps$steps,meansteps$day_type,
+       function (x) { c(MINIMUM=min(x),MEAN=mean(x),
+                        MEDIAN=median(x),MAXIMUM=max(x))})
+```
